fix popup layout issues, fix fromScratch with no webmap, add placeholder tooltip to login settings

--- a/src/app/components/crowdsource/styles/layouts/sidePanel/themes/default.scss
+++ b/src/app/components/crowdsource/styles/layouts/sidePanel/themes/default.scss
@@ -3,7 +3,7 @@ $shadowColor: #fff;
 
 .sidePanel-default {
 
-  .header {
+  .main-app-header.header {
     background-color: #3e3d3e;
     color: #fff;
 
