--- a/src/app/components/crowdsource/styles/layouts/stacked/themes/default.scss
+++ b/src/app/components/crowdsource/styles/layouts/stacked/themes/default.scss
@@ -29,7 +29,7 @@ $shadowColor: #fff;
     }
   }
 
-  .header {
+  .main-app-header.header {
     background-color: #3e3d3e;
 
     .share{
