--- a/src/app/components/header/_Header.scss
+++ b/src/app/components/header/_Header.scss
@@ -1,4 +1,4 @@
-.header {
+.main-app-header.header {
   position: absolute;
   height: $navbar-height;
   top: 0;
