--- a/src/app/themes/stacked/default.scss
+++ b/src/app/themes/stacked/default.scss
@@ -3,7 +3,7 @@ $shadowColor: #fff;
 
 .stacked {
 
-  .header {
+  .main-app-header.header {
     background-color: #3e3d3e;
     color: #fff;
 
